small blurred navbar fix

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1738,7 +1738,7 @@ input#account-drawer {
 
 .navbar-blur {
 	position: absolute;
-	background-color: rgba(245, 245, 245, 0.496);
+	background-color: rgba(245, 245, 245, 0.747);
 	-webkit-backdrop-filter: blur(10px);
 	backdrop-filter: opacity(50%);
 	height: 100%;
